# naravisuals-react-docs

./: .biomeignore  .gitignore  README.md  TODOS.md  biome.json  bun-env.d.ts  bunfig.toml  check_mermaid.py  debug_validator.js  debug_validator_2.js  fix_mermaid.js  package-lock.json  package.json  robots.txt  rspack.config.ts  sitemap.xml  temp_append.css  test-mermaid.ts  test-render.html  tsconfig.json
.antigravitycli/: 090bbeab-1782-40ff-ac3e-c9995e987d57.json
apps/web/: package.json
content/docs/: 01-getting-started.md  02-architecture.md  04-ui-components.md
docs/: 00-abstract.md
docs/01-getting-started/: 01-introduction.md  02-installation.md
docs/02-architecture/: 01-build-pipeline.md  04-markdown-engine.md  (+4 more)
scripts/: audit-mermaid.mts  build-docs.mts  cli.mts  validate-all.mts  verify-ci.mts
scripts-rs/: Cargo.toml  TODOS.md  debug_syntaxes.rs
scripts-rs/src/: build_docs.rs  core.rs  plugins.rs
scripts-rs/src/compiler/: ast.rs  engine.rs  mod.rs  unit.rs  utils.rs
scripts-rs/tests/: integration_test.rs
server/: prod-server.mjs
src/: frontend.tsx  index.html  robots.txt
tests/: app.test.tsx  breadcrumbs.test.tsx  build-pipeline.test.ts  core.test.ts  di-provider.test.tsx  diagnostics.test.ts  docfooter.test.tsx  docviewer.test.tsx  edge-cases.test.ts  error-boundary.test.tsx  generated-output.test.ts  markdown-validators.test.ts  mermaid-validation.test.ts  mocks.test.ts  reporting.test.ts  search-engines.test.ts  search-impl.test.ts  services.test.ts  setup.ts  sidebar.test.tsx  table-of-contents.test.tsx  test-utils.tsx  tsconfig.json
(+188 files in other folders)
