[package]
name = "scripts-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
colored = "3.1.1"
pulldown-cmark = "0.13.3"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
walkdir = "2.5.0"
smol_str = { version = "0.3.2", features = ["serde"] }
fxhash = "0.2.1"
indoc = "2.0.5"
cow-utils = "0.1.3"
html-escape = "0.2.13"

[dev-dependencies]
tempfile = "3.27.0"
